--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.4.16",
     "next-themes": "^0.2.1",
     "prism-react-renderer": "^2.0.6",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.20.0",
